Fixing styling for images to remove ugly box-shadow gap when resizing image

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -259,15 +259,15 @@ p{
 .galleryImage{
   height: 20rem;
   align-self: center;
-  padding: 0.5rem;
+  margin: 0.5rem;
   flex-grow: 1;
-  transition: height 200ms ease-in, width 200ms ease-in, padding 200ms ease-in;
+  transition: height 200ms ease-in, width 200ms ease-in, margin 200ms ease-in, box-shadow 200ms ease-in;
 }
 
 .galleryImage:hover{
   box-shadow: 0 0 15px black;
   height: 21rem;
-  padding: 0;
+  margin: 0;
 }
 
 .imageTags{
